[project]
name = "api"
version = "0.1.0"
description = "Mi proyecto"
requires-python = ">=3.10"
dependencies = [
   "fastapi[standard]",
   "pydantic==<VERSION_ESTABLE_DE_PYDANTIC>",
   "python-dotenv==<VERSION_ESTABLE_DE_PYTHON_DOTENV>",
   "supabase==<VERSION_ESTABLE_DE_SUPABASE>"
 ]

[tool.fastapi]
entrypoint = "main:app"